feat(ci): support ark vke deploy

--- a/helm/charts/opencoze/templates/milvus-statefulset.yaml
+++ b/helm/charts/opencoze/templates/milvus-statefulset.yaml
@@ -37,17 +37,21 @@ spec:
             - name: ETCD_ENDPOINTS
               value: "{{ include "opencoze.fullname" . }}-etcd:2379"
             - name: MINIO_ADDRESS
-              value: "{{ include "opencoze.fullname" . }}-minio:9000"
+              value: {{ .Values.cozeServer.env.MINIO_ADDRESS | quote }}
             - name: MINIO_BUCKET_NAME
-              value: {{ .Values.milvus.bucketName | quote }}
+              value: {{ .Values.cozeServer.env.MINIO_BUCKET_NAME | quote }}
             - name: MINIO_ACCESS_KEY_ID
-              value: {{ .Values.minio.accessKey | quote }}
+              value: {{ .Values.cozeServer.env.MINIO_ACCESS_KEY_ID | quote }}
             - name: MINIO_SECRET_ACCESS_KEY
-              value: {{ .Values.minio.secretKey | quote }}
+              value: {{ .Values.cozeServer.env.MINIO_SECRET_ACCESS_KEY | quote }}
             - name: MINIO_USE_SSL
-              value: "false"
+              value: {{ .Values.cozeServer.env.MINIO_USE_SSL | quote }}
+            - name: MINIO_REGION
+              value: {{ .Values.cozeServer.env.MINIO_REGION | quote }}
+            - name: MINIO_USE_VIRTUAL_HOST
+              value: {{ .Values.cozeServer.env.MINIO_USE_VIRTUAL_HOST | quote }}
             - name: LOG_LEVEL
-              value: "debug"
+              value: "warn"
           ports:
             - containerPort: 19530
             - containerPort: 9091
