--- a/helm/charts/opencoze/templates/deployment.yaml
+++ b/helm/charts/opencoze/templates/deployment.yaml
@@ -24,9 +24,11 @@ spec:
         app.kubernetes.io/component: server
     spec:
       initContainers:
+        {{- if .Values.mysql.enabled }}
         - name: wait-for-mysql
           image: {{ .Values.images.busybox }}
           command: ['sh', '-c', 'until nc -z {{ include "opencoze.fullname" . }}-mysql 3306; do echo waiting for mysql; sleep 2; done']
+        {{- end }}
         {{- if .Values.redis.enabled }}
         - name: wait-for-redis
           image: {{ .Values.images.busybox }}
@@ -62,40 +64,12 @@ spec:
               containerPort: {{ .targetPort }}
           {{- end }}
           env:
-            - name: MYSQL_HOST
-              value: "{{ include "opencoze.fullname" . }}-mysql"
-            - name: MYSQL_PORT
-              value: {{ .Values.mysql.port | quote }}
-            - name: MYSQL_USER
-              value: {{ .Values.mysql.user | quote }}
-            - name: MYSQL_PASSWORD
-              value: {{ .Values.mysql.password | quote }}
-            - name: MYSQL_DATABASE
-              value: {{ .Values.mysql.database | quote }}
-            - name: REDIS_ADDR
-              value: "{{ include "opencoze.fullname" . }}-redis:{{ .Values.redis.port }}"
             - name: MINIO_AK
               value: {{ .Values.minio.accessKey | quote }}
             - name: MINIO_SK
               value: {{ .Values.minio.secretKey | quote }}
-            - name: STORAGE_BUCKET
-              value: {{ .Values.minio.bucket | quote }}
-            - name: ES_ADDR
-              value: "http://{{ include "opencoze.fullname" . }}-elasticsearch:9200"
-            - name: ES_USERNAME
-              value: {{ .Values.elasticsearch.username | quote }}
-            - name: ES_PASSWORD
-              value: {{ .Values.elasticsearch.password | quote }}
-            - name: MQ_NAME_SERVER
-              value: "http://{{ include "opencoze.fullname" . }}-rocketmq-namesrv:9876"
             - name: MILVUS_ADDR
               value: "{{ include "opencoze.fullname" . }}-milvus:19530"
-            - name: MINIO_ENDPOINT
-              value: "{{ include "opencoze.fullname" . }}-minio:9000"
-            - name: MINIO_API_HOST
-              value: "http://{{ include "opencoze.fullname" . }}-minio:9000"
-            - name: MYSQL_DSN
-              value: "{{ .Values.mysql.user }}:{{ .Values.mysql.password }}@tcp({{ include "opencoze.fullname" . }}-mysql:3306)/{{ .Values.mysql.database }}?charset=utf8mb4&parseTime=True&loc=Local"
             {{- range $key, $val := .Values.cozeServer.env }}
             - name: {{ $key }}
               value: {{ $val | quote }}
